Hot fix for nothing was the same on mobile

--- a/drake-albums/css/main.css
+++ b/drake-albums/css/main.css
@@ -907,7 +907,7 @@ blockquote {
 
 .nwts-album {
   background: url(../img/nwts-clouds-2.png);
-  height: auto;
+  height: 300px;
   width: 1500px; }
   @media (min-width: 35em) {
     .nwts-album {
