--- a/drake-albums/sass/_album.scss
+++ b/drake-albums/sass/_album.scss
@@ -532,7 +532,7 @@
 
 .nwts-album {
 	background:url(../img/nwts-clouds-2.png);
-	height: auto;
+	height: 300px;
 	width: 1500px;
 	@media (min-width: $bp-medium) {
 		width: 2000px;
